.provarCaches/00D5f000005vwGkEAI/objects/rstk__sormadmd__c.object
<CustomObject>
    <description>sormadmd__c</description>
    <fields>
        <fullName>rstk__altextid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__sormadmd_sorma__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  IF(ISNULL( rstk__sormadmd_sorma__r.rstk__sorma_soline__r.rstk__soline_line__c ), &apos;&apos;, (TEXT(rstk__sormadmd_sorma__r.rstk__sorma_soline__r.rstk__soline_line__c) &amp; &apos;_&apos;)) &amp; rstk__sormadmd_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__sormadmd_sorma__r.rstk__externalid__c &amp; &apos;_&apos; &amp; IF(ISNULL( rstk__sormadmd_sorma__r.rstk__sorma_soline__r.rstk__soline_line__c ), &apos;&apos;, (TEXT(rstk__sormadmd_sorma__r.rstk__sorma_soline__r.rstk__soline_line__c) &amp; &apos;_&apos;)) &amp; rstk__sormadmd_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__sormadmd_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos; &apos; +  rstk__sormadmd_invdiv__r.rstk__sydiv_div__c + &apos; &apos; +  rstk__sormadmd_project__r.rstk__pjproj_proj__c + &apos; &apos; + rstk__sormadmd_sorma__r.rstk__sorma_rmano__c</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_stampdimensions__c</fullName>
        <formula>!ISBLANK(IF(rstk__sormadmd_compitem__r.rstk__icitem_dimvalind__c, 
rstk__sormadmd_compitem__r.rstk__icitem_iccomcod__r.rstk__iccomcod_dimval__r.rstk__sydim_dimval__c, 
rstk__sormadmd_compitem__r.rstk__icitem_dimval__r.rstk__sydim_dimval__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stamp Dimensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rollsumm_txnqty__c</fullName>
        <label>Total Quantity</label>
        <summarizedField>rstk__sormadmdcst__c.rstk__sormadmdcst_txnqty__c</summarizedField>
        <summaryForeignKey>rstk__sormadmdcst__c.rstk__sormadmdcst_sormadmd__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Component Item for this RMA line</inlineHelpText>
        <label>Component Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>RMA Demand</relationshipLabel>
        <relationshipName>RMA_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_dimvals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Dimension for this RMA Demand</inlineHelpText>
        <label>Dimension Values</label>
        <referenceTo>rstk__dimvals__c</referenceTo>
        <relationshipLabel>RMA Demand</relationshipLabel>
        <relationshipName>sormadmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_invdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Inventory Division associated with the item on this RMA line</inlineHelpText>
        <label>Inventory Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>RMA Demand</relationshipLabel>
        <relationshipName>RMA_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_lotno__c</fullName>
        <inlineHelpText>This is the Lot Number being returned for the item associated with this RMA line</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_lotnoship__c</fullName>
        <inlineHelpText>This is the Lot Number being shipped for the item associated with this RMA line</inlineHelpText>
        <label>Lot Number Shipped</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_nodims__c</fullName>
        <formula>rstk__sormadmd_invdiv__r.rstk__sydiv_cmpno__r.rstk__sycmp_nodims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Suppress Dimension Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_numsrls__c</fullName>
        <label>Number of Serials</label>
        <summaryForeignKey>rstk__sormaser__c.rstk__sormaser_sormadmd__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_price__c</fullName>
        <inlineHelpText>When this RMA line is authorized for credit, this is the price that will be credited.</inlineHelpText>
        <label>Credit Price</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Project associated with the item on this RMA line</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>RMA Demand</relationshipLabel>
        <relationshipName>RMA_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_qtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the quantity allocated for this RMA line</inlineHelpText>
        <label>Quantity Allocated</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_qtyauth__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Quantity Authorized for this RMA line</inlineHelpText>
        <label>Quantity Authorized</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_qtyinsp__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Obsolete (Quantity in Inspection)</inlineHelpText>
        <label>ZZ_Obsolete</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_qtyper__c</fullName>
        <inlineHelpText>This is the quantity per for the Component Item for this RMA line</inlineHelpText>
        <label>Quantity Per</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_qtyrec__c</fullName>
        <inlineHelpText>Obsolete (Quantity Received)</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_qtyscrap__c</fullName>
        <inlineHelpText>Obsolete (Quantity Scrapped)</inlineHelpText>
        <label>ZZ_Obsolete</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_qtyship__c</fullName>
        <inlineHelpText>Obsolete (Quantity Shipped)</inlineHelpText>
        <label>ZZ_Obsolete</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_qtytoinv__c</fullName>
        <inlineHelpText>Obsolete (Quantity To Invoice)</inlineHelpText>
        <label>ZZ_Obsolete</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_shipsite__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site from which this RMA line will be shipped</inlineHelpText>
        <label>Ship From Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>RMA Demand (Ship From Site)</relationshipLabel>
        <relationshipName>shipsitesormadmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Site to which this RMA line will be received</inlineHelpText>
        <label>Receive to Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>RMA Demand</relationshipLabel>
        <relationshipName>sormadmds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_sorma__c</fullName>
        <inlineHelpText>This is the RMA number associated with this record</inlineHelpText>
        <label>RMA</label>
        <referenceTo>rstk__sorma__c</referenceTo>
        <relationshipLabel>RMA Demand</relationshipLabel>
        <relationshipName>RMA_Demand</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__sormadmd_wbs__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>WBS Account</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <referenceTo>rstk__pjprojwbs__c</referenceTo>
        <relationshipLabel>RMA Demand</relationshipLabel>
        <relationshipName>RMA_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>RMA Demand</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__sormadmd_site__c</columns>
        <columns>rstk__sormadmd_shipsite__c</columns>
        <columns>rstk__sormadmd_invdiv__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__formula_extid__c</columns>
        <columns>rstk__sormadmd_compitem__c</columns>
        <columns>rstk__sormadmd_project__c</columns>
        <columns>rstk__sormadmd_sorma__c</columns>
        <columns>rstk__sormadmd_qtyauth__c</columns>
        <columns>rstk__sormadmd_qtyper__c</columns>
        <columns>rstk__rollsumm_txnqty__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__RS_RMA_Demand</fullName>
        <columns>NAME</columns>
        <columns>rstk__formula_stampdimensions__c</columns>
        <columns>rstk__sormadmd_dimvals__c</columns>
        <columns>rstk__sormadmd_invdiv__c</columns>
        <columns>rstk__externalid__c</columns>
        <columns>rstk__formula_extid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>rstk__sormadmd_sorma__c</columns>
        <columns>rstk__sormadmd_compitem__c</columns>
        <columns>rstk__sormadmd_project__c</columns>
        <columns>rstk__sormadmd_qtyauth__c</columns>
        <columns>rstk__sormadmd_qtyper__c</columns>
        <columns>rstk__rollsumm_txnqty__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>RMA Demand</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RMA Demand</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>